# etl-csv-to-sql-server

./: .envexample  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
dags/: weekly_csv_load.py
docker/: Dockerfile  docker-compose.yml
docker/entrypoints/: start_airflow_webserver.sh
docker/init-scripts/: mount-db-backup.sh
project/: cfg.py  constants.py  extract.py  helpers.py  load.py  main.py  schemas.py  transform.py  validate.py
